# Lab2QRCode

./: .gitignore  CMakeLists.txt  README.md  build-wasm-deps.sh  verify-build.sh
.github/workflows/: build.yaml  deploy-pages.yaml
setting/: config.json
setting/styles/: barcode_widget.qss
src/: BarcodeWidget.cpp  BarcodeWidget.h  CameraConfig.cpp  CameraConfig.h  CameraWidget.cpp  CameraWidget.h  FrameWidget.cpp  FrameWidget.h  about_dialog.cpp  about_dialog.h  commondef.h  convert.h  logging.h  main.cpp  sysinfo.h
src/components/: ImageSizeConfig.cpp  ImageSizeConfig.h  UiConfig.cpp  UiConfig.h  beep.cpp  beep.h  message_dialog.cpp  message_dialog.h
src/mqtt/: MQTTMessageWidget.cpp  MQTTMessageWidget.h  mqtt_client.cpp  mqtt_client.h
src/version_info/: version.h
test_samples/: readme.md
test_samples/text2QRCode/: Aztec_invalid.txt  Aztec_valid.txt  Codabar_invalid.txt  Code128_valid.txt  Code39_invalid.txt  Code39_valid.txt  Code93_invalid.txt  Code93_valid.txt  DXFilmEdge_valid.txt  DataBarExpanded_invalid.txt  DataBarExpanded_valid.txt  DataBarLimited_invalid.txt  DataBarLimited_valid.txt  DataMatrix_invalid.txt  DataMatrix_valid.txt  MaxiCode_invalid.txt  MaxiCode_valid.txt  MicroQRCode_invalid.txt  MicroQRCode_valid.txt  PDF417_invalid.txt  PDF417_valid.txt  QRCode_invalid.txt  QRCode_valid.txt  RMQRCode_invalid.txt  RMQRCode_valid.txt  UPCA_invalid.txt  UPCA_valid.txt
translations/: app_en_US.ts  app_zh_CN.ts
wasm-module/: CMakeLists.txt
wasm-module/src/: barcode_api.cpp  barcode_api_simple.cpp
web-frontend/: CAMERA_GUIDE.md  README.md  generate-cert.sh  index.html  package-lock.json  package.json  serve-https.py  serve.py  start.sh  vite.config.ts
web-frontend/public/: .gitignore  _headers
web-frontend/src/: App.tsx  index.css
web-frontend/src/components/: BarcodeGenerator.tsx  CameraScanner.tsx  ThemeToggle.tsx
web-frontend/src/contexts/: ThemeContext.tsx
web-frontend/src/hooks/: useCamera.ts
web-frontend/src/types/: wasm.d.ts
web-frontend/src/utils/: wasmLoader.ts
